test/fixtures/type-error/scope-failure.lys
fun isComplex(number: ref): boolean =
  match number {
    case x is Real(_) -> false
    else -> false
  }